--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "vis/image_storage_l5",
   "description": "Image storage for L5",
+  "license": "proprietary",
   "authors": [
     {
       "name": "vis",
